# studia

./: .gitignore  .gitmodules  DensityComparison.ipynb  FAT.cbp  README.md  Readme.md  algorithm.py  build.gradle  coding.asm  decoding.asm  encoding.asm  entries_operations.c  generator.py  graph.py  helpers.c  helpers.h  main.c  measuring.py  program.py  readme.txt  settings.gradle  user_interaction.c  user_interaction.h  volume_operations.c
.github/workflows/: shoutout.yml
BinaryTree/: binarytree.cpp  binarytree.h  main.cpp  makefile  node.cpp  node.h
DataBase/: Makefile  functions.c  functions.h  main.c
DataBase/src/: functions.h  main.c
Grafy/Mosty/: Graph.cpp  main.cpp
Grafy/Mosty/tests/: graf2.txt  tests.sh
Liniowe/src/: LinkedList.h
Liniowe/tests/: VectorTests.cpp
Mapy/src/: TreeNode.h  main.cpp
Monitory/: AllFullMonitor.h  Consumer.h  Producer.h  QueueMonitor.h  Semaphore.h
Semafory/: main.c  queue.h
System plików/: FileHandle.c  FileSystem.h  definitions.h  main.c
bachelor/1/PRI/DataBase/: README.md
bachelor/1/PRI/FAT/: main.c  volume_operations.h
bachelor/2/PROI/elka-quest/: README.md
bachelor/3/SOI/Monitory/: Condition.h  ItemQueue.h  PrintMonitor.h  Runnable.h  main.cpp
bachelor/3/SOI/System plików/: FileHandle.h
bachelor/4/ARKO/x86/: .gitignore  README.md
bachelor/4/PROZ/picgallery/: .gitattributes
bachelor/5/AAL/chemikalia/: .gitattributes
bachelor/5/GKOM/opengl-windmill/: .gitattributes  .gitignore  README.md  ZT2-wiatrak.vcxproj
bachelor/6/IUM/eShopping/: README.md
bachelor/6/TIN/NFS/: .gitattributes
bachelor/6/TKOM/timon-interpreter/: .gitattributes
inż/1/PRI/FAT/: .gitignore  definitions.h  entries_operations.h
inż/2/PROI/BinaryTree/: README.md
inż/2/PROI/elka-quest/: .gitignore  Door.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Key.h  Player.cpp  Player.h  README.md  Resources.cpp  Resources.h  Room.cpp  Room.h  main.cpp
inż/3/AISDI/: .gitignore
inż/3/SOI/: .gitignore
inż/3/SOI/Monitory/: Monitor.h
inż/3/SOI/Semafory/: consumer.h  global.h  producer.h
inż/3/SOI/System plików/: FileSystem.c
inż/4/ARKO/MIPS/: README.md
inż/4/ARKO/x86/: Makefile  README.md
inż/4/PROZ/picgallery/: build.gradle
inż/5/AAL/chemikalia/: graph.py  readme.txt
inż/5/GKOM/opengl-windmill/: .gitignore  CMakeLists.txt  Makefile  README.md  ZT2-wiatrak.sln  ZT2-wiatrak.vcxproj  ZT2-wiatrak.vcxproj.filters
inż/5/GKOM/opengl-windmill/res/shaders/: absorber.fs  absorber.vs  basic.fs  basic.vs  light.fs  light.vs  skybox.fs  skybox.vs  textured_absorber.fs  textured_absorber.vs
inż/5/GKOM/opengl-windmill/src/: CubeMap.h  Renderer.cpp  Renderer.h  main.cpp
inż/5/GKOM/opengl-windmill/src/entities/: Entity.cpp  Entity.h
inż/5/GKOM/opengl-windmill/src/entities/absorbers/: Absorber.h  TexturedAbsorber.h
inż/5/GKOM/opengl-windmill/src/entities/lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.h
inż/5/GKOM/opengl-windmill/src/entities/models/: BaseObjectModel.cpp  BaseObjectModel.h  CircularFrustum.h  CubeModel.h  CuboidModel.cpp  CuboidModel.h  PlaneModel.cpp  PlaneModel.h  Pyramid.h  RectangleFrustum.h  RectangularFrustum.h  Sphere.h
inż/5/GKOM/opengl-windmill/src/entities/skybox/: Skybox.h
inż/5/GKOM/opengl-windmill/src/rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
inż/5/GKOM/opengl-windmill/src/rendering/shaders/: AbsorberShaderProgram.cpp  AbsorberShaderProgram.h  LightShaderProgram.cpp  LightShaderProgram.h  ShaderProgram.cpp  ShaderProgram.h  TexturedAbsorberShaderProgram.cpp  TexturedAbsorberShaderProgram.h
inż/5/GKOM/opengl-windmill/src/textures/: Texture.h
inż/5/GKOM/opengl-windmill/src/utils/: Color.h  DirectionalLightAttributes.h  Material.h  PointLightAttributes.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h  Triangle.h  Vertex.h  Window.cpp  Window.h
inż/5/PSZT/perceptron/: README.md
inż/6/TIN/NFS/: .gitattributes  README.md
inż/7/ALHE/antcolony/: .gitattributes  (+1 more)
master/1/NLP/textgen/textgen/: LICENSE  README.md  pyproject.toml
master/1/NLP/textgen/textgen/docs/docs/: training.md
master/1/NLP/textgen/textgen/src/textgen/: __main__.py  generation.py  train.py
master/1/NLP/textgen/textgen/src/textgen/model/: pickers.py
mgr/1/AMHE/genetwork/genetwork/: LICENSE  README.md  pyproject.toml
mgr/1/AMHE/genetwork/genetwork/docs/docs/: index.md
mgr/1/AMHE/genetwork/genetwork/docs/docs/usage/: cli.md  library.md
mgr/1/AMHE/genetwork/genetwork/src/genetwork/: __init__.py  __main__.py  draw.py  log.py  networks.py
mgr/1/AMHE/genetwork/genetwork/src/genetwork/genetic/: creatures.py  crossovers.py  evaluators.py  evolution.py  initializers.py  mutations.py  selections.py  successions.py
mgr/1/AMHE/genetwork/genetwork/src/genetwork/resources/: config.json
mgr/1/AMHE/genetwork/genetwork/src/genetwork/subpackage/: module.py
mgr/1/AMHE/genetwork/genetwork/tests/functional/: test_genetwork.py
mgr/1/AMHE/genetwork/genetwork/tests/unit/genetwork/subpackage/: test_module.py
mgr/1/ZZSN/prototypical-networks/protosound/: setup.cfg
mgr/1/ZZSN/prototypical-networks/protosound/src/protosound/: __init__.py  __main__.py  data-old newer.py  data.py  data1.py  modules.py  modules1.py
mgr/1/ZZSN/prototypical-networks/protosound/src/protosound/subpackage/: module.py
mgr/1/ZZSN/prototypical-networks/protosound/tests/functional/: test_protosound.py
mgr/1/ZZSN/prototypical-networks/protosound/tests/unit/protosound/subpackage/: test_module.py
mgr/2/SPDB/retrail/api/retrapi/: .dockerignore  Dockerfile  environment.yml  pyproject.toml  requirements.txt
mgr/2/SPDB/retrail/api/retrapi/src/retrapi/: __main__.py  app.py  database.py
mgr/2/SPDB/retrail/api/retrapi/src/retrapi/handlers/: border.py  closest.py  find.py
mgr/2/SPDB/retrail/api/retrapi/src/retrapi/models/: base.py  config.py  data.py
mgr/2/SPDB/retrail/api/retrapi/src/retrapi/models/api/: request.py  response.py
mgr/2/SPDB/retrail/api/retrapi/src/retrapi/models/database/: models.py
src/main/resources/: app.conf  sample.fxml  search.fxml
(+382 files in other folders)
