[tool.poetry]
name = "textgen"
version = "0.1.0"
description = "Text generation using machine learning."
readme = 'README.md'
authors = ["Konrad Opaliński", "Sebastian Pietras", "Łukasz Wolanin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
repository = "https://github.com/spietras/textgen"
documentation = "https://spietras.github.io/textgen"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20"
typer = { version = "^0.3", extras = ["all"] }
pytorch-lightning = "^1.3"
nltk = "^3.6"
ordered-set = "^4.0"
truecase = "^0.0.12"

# dev
jupyterlab = { version = "^3", optional = true }

# test
pytest = { version = "^6", optional = true }

# docs
mkdocs-material = { version = "^7", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "pytest", "mkdocs-material"]
test = ["pytest"]
docs = ["mkdocs-material"]

[tool.poetry.scripts]
# cli entry point
textgen = "textgen.__main__:cli"

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
