[metadata]
name = protosound
description = Prototypical network for sound classification.

[options]
# set package root as src
package_dir =
    =src

# automatically find all packages
# searching recursively starting from directory where this file is
packages = find:

# add all requirements here
# remember to reinstall package after adding new dependencies
python_requires = >=3.9
install_requires =
    librosa >= 0.8
    numpy >= 1.20
    typer[all] >= 0.3
    pytorch-lightning >= 1.3

[options.extras_require]
dev =
    jupyterlab >= 3.0
    matplotlib >= 3.4

[options.packages.find]
# search in src directory
where = src

# don't treat resources as a package
# note that you still need to add __init__.py to every subdirectory in resources
# importlib needs that to work
exclude = resources

[options.entry_points]
console_scripts =
    protosound = protosound.__main__:cli

[options.package_data]
# instead treat resources as data
protosound = resources/*