[tool.poetry]
name = "retrapi"
version = "0.1.0"
description = "retrail api"
authors = ["spietras <01133337@pw.edu.pl>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/spietras/retrail"

[tool.poetry.dependencies]
python = "~3.9.0"
typer = { version = "^0.4", extras = ["all"] }
pydantic = "^1.9"
fastapi = "^0.71"
SQLAlchemy = "^1.4"
databases = { version = "^0.5", extras = ["postgresql"] }
uvicorn = "^0.16"
geopy = "^2.2"
numpy = "^1.22"
scipy = "^1.7"
aiofiles = "^0.8"
networkx = "^2.6"

# dev

# test
pytest = { version = "^6", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest"]
test = ["pytest"]
[tool.poetry.scripts]
# cli entry point
retrapi = "retrapi.__main__:cli"

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
